@@ -98,7 +98,7 @@ poll_poll (EV_P_ ev_tstamp timeout)
       else if (errno == ENOMEM && !syserr_cb)
         fd_enomem (EV_A);
       else if (errno != EINTR)
-        syserr ("(libev) poll");
+        ev_syserr ("(libev) poll");
     }
   else
     for (p = polls; res; ++p)
